--- a/main.html
+++ b/main.html
@@ -11,6 +11,10 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
+	<div class="container">
+		<div class="item-1">1</div>
+	</div>
+
 </body>
 
 </html>
