--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
-	<div class="container">
+	<div class="holder">
 		<div class="item-1">1</div>
 	</div>
 
